adding several warehouses

--- a/purchase-service/src/main/resources/messages.properties
+++ b/purchase-service/src/main/resources/messages.properties
@@ -31,6 +31,7 @@ warehouse.error.ALREADY_CREATED=Цей запис вже було створен
 warehouse.error.TOO_MUCH_QUANTITY=Кількість зняття не повинна бути більшою за кількість, що надходила
 warehouse.error.QUANTITY_MUST_POSITIVE=Кількість зняття не повинна бути меншою за нуль
 warehouse.error.DEFAULT=Помилка при роботі зі складом
+warehouse.error.UNABLE_CALCULATE_WAREHOUSE_BALANCES=Не вдалось обчислити залишки на складі
 
 warehouse.notfound=Склад не знайдено
 
