--- a/purchase-service/src/main/resources/messages.properties
+++ b/purchase-service/src/main/resources/messages.properties
@@ -11,6 +11,7 @@ validation.purchase.totalPrice.null=В закупівлі не вказана ц
 validation.purchase.totalPrice.negative=В закупівлі ціна не може бути негативною
 validation.purchase.paymentMethod.null=В закупівлі не вказаний форма оплати
 validation.purchase.currency.null=В закупівлі не вказана валюта
+validation.purchase.exchangeRate.invalid=Невірний формат курса валют
 
 purchase.error.INVALID_FILTERS=Неправильний формат фільтрів для закупівлі
 purchase.error.ONLY_ADMIN=Дія доступна лише для адміністратора
