--- a/sale-service/src/main/resources/messages.properties
+++ b/sale-service/src/main/resources/messages.properties
@@ -11,6 +11,7 @@ validation.sale.totalPrice.null=В продажі не вказана ціна
 validation.sale.totalPrice.negative=В продажі ціна не може бути негативною
 validation.sale.paymentMethod.null=В продажі не вказаний форма оплати
 validation.sale.currency.null=В продажі не вказана валюта
+validation.sale.exchangeRate.invalid=Невірний формат курса валют
 
 sale.error.INVALID_FILTERS=Неправильний формат фільтрів для продажі
 sale.error.ONLY_ADMIN=Дія доступна лише для адміністратора
