--- a/client-service/src/main/resources/messages.properties
+++ b/client-service/src/main/resources/messages.properties
@@ -42,6 +42,11 @@ region.notfound=Область не знайдено
 validation.route.notblank=Назва маршруту не може бути порожньою
 validation.route.size=Назва маршруту не може перевищувати 255 символів
 
+clientProduct.notfound= Продкутку клієнта не знайдено
+
+validation.clientProduct.notblank=Назва продкутку клієнта не може бути порожньою
+validation.clientProduct.size=Назва продкутку клієнта не може перевищувати 255 символів
+
 route.notfound=Маршрут не знайдено
 
 validation.source.notblank=Назва джерела не може бути порожньою
