v1 to fix ios cash

--- a/purchase-service/src/main/resources/messages.properties
+++ b/purchase-service/src/main/resources/messages.properties
@@ -20,8 +20,9 @@ purchase.notfound=Закупівлю не знайдено
 
 validation.product.name.notblank=Назва продукту не може бути порожньою
 validation.product.usage.notblank=Назва використання не може бути порожньою
+validation.product.usage.notnull=Тип використання продукту не може бути порожнім
 validation.product.name.size=Назва продукту не може перевищувати 255 символів
-validation.product.usage.size=Назва викорситання не може перевищувати 255 символів
+validation.product.usage.size=Назва використання не може перевищувати 50 символів
 
 product.error.ILLEGAL_USAGE=Вказано неправильний тип використання продукту
 
