fifteenth step to new crm

--- a/user-service/src/main/resources/messages.properties
+++ b/user-service/src/main/resources/messages.properties
@@ -4,6 +4,7 @@ role.leader=Керівник
 role.driver=Водій
 role.storekeeper=Комірник
 role.accountant=Бухгалтер
+role.declarant=Декларант
 
 access.denied=У вас немає прав для виконання цієї дії
 auth.error=Невірні данні для входу
