twenty-first step to new crm

--- a/client-service/src/main/resources/messages.properties
+++ b/client-service/src/main/resources/messages.properties
@@ -24,6 +24,26 @@ client.error.INVALID_STATUSES=Некоректний формат статусі
 client.error.EXPORT_LIMIT_EXCEEDED=Перевищено ліміт експорту
 client.error.EXTERNAL_SERVICE_ERROR=Помилка зовнішнього сервісу
 client.error.EXCEL_GENERATION_ERROR=Помилка генерації Excel-файлу
+client.error.ACCESS_DENIED=У вас немає прав для виконання цієї дії
+client.error.DELETE_FORBIDDEN=Неможливо видалити клієнта
+client.error.IMPORT_INVALID_FILE=Excel файл повинен містити принаймні заголовок та один рядок даних
+client.error.IMPORT_ERRORS=Помилки при імпорті
+client.error.IMPORT_READ_ERROR=Помилка читання Excel файлу
+client.error.IMPORT_ID_EXISTS=ID вже зайнятий
+client.error.IMPORT_MISSING_COLUMN=Колонка не знайдена
+client.error.IMPORT_REQUIRED_FIELD=Поле є обов'язковим
+client.error.IMPORT_SOURCE_NOT_FOUND=Залучення не знайдено
+client.error.IMPORT_INVALID_NUMBER=Невірний формат числа
+client.error.IMPORT_INVALID_DATE=Невірний формат дати
+client.error.IMPORT_INVALID_LIST_VALUE=Значення не знайдено в списку доступних значень
+client.error.IMPORT_INVALID_BOOLEAN=Невірне значення boolean
+client.error.IMPORT_INVALID_DATETIME=Невірний формат дати/часу
+client.error.AUTHENTICATION_REQUIRED=Потрібна аутентифікація
+client.error.FIELD_ALREADY_EXISTS=Поле з такою назвою вже існує
+client.error.FIELD_COUNT_MISMATCH=Невідповідність кількості полів
+client.error.PERMISSION_ALREADY_EXISTS=Дозвіл вже існує
+client.error.CLIENT_TYPE_ALREADY_EXISTS=Тип клієнта з такою назвою вже існує
+client.error.SERIALIZATION_ERROR=Помилка серіалізації даних
 
 client.notfound=Клієнт не знайдено
 
