--- a/container-service/src/main/resources/messages.properties
+++ b/container-service/src/main/resources/messages.properties
@@ -6,9 +6,17 @@ server.error=Сталася непередбачена помилка
 validation.container.notblank=Назва тари не може бути порожньою
 validation.container.size=Назва тари не може перевищувати 255 символів
 
+container.error.DEFAULT=Помилка при обробці тари
 container.error.NOT_VALID_FILTERS=Некорректні фільтри
 container.error.NOT_ENOUGH_DATA=Не вказано всі дані для операції
 container.error.NOT_ENOUGH_CONTAINERS=Мало тари для операції
+container.error.INVALID_BALANCE=Невірний баланс тари
+container.error.AUTHENTICATION_REQUIRED=Потрібна аутентифікація
+container.error.INVALID_QUERY=Пошуковий запит недійсний
+container.error.INVALID_FIELDS=Список полів для експорту недійсний
+container.error.EXCEL_GENERATION_ERROR=Помилка генерації Excel-файлу
+container.error.INVALID_FILTER=Недопустимий ключ фільтра
+container.error.INVALID_JSON=Некоректний формат JSON
 container.notfound=Тару не знайдено
 
 json.error=Некоректний формат JSON
