twenty-second step to new crm

--- a/user-service/src/main/resources/messages.properties
+++ b/user-service/src/main/resources/messages.properties
@@ -57,6 +57,8 @@ transaction.error.ACCOUNT_ID_REQUIRED=ID рахунку обов'язковий
 transaction.error.ACCESS_DENIED=Користувач не має прав для операції з рахунком
 transaction.error.CATEGORY_ALREADY_EXISTS=Категорія з такою назвою вже існує
 transaction.notfound=Транзакцію не знайдено
+transaction.error.COUNTERPARTY_NOT_FOUND=Контрагента не знайдено
+transaction.error.COUNTERPARTY_ALREADY_EXISTS=Контрагент з такою назвою для цього типу вже існує
 transaction.category.notfound=Категорію транзакції не знайдено
 
 branch.notfound=Філію не знайдено
