twenty-third step to new crm

--- a/purchase-service/src/main/resources/messages.properties
+++ b/purchase-service/src/main/resources/messages.properties
@@ -75,4 +75,9 @@ warehouse.error.INSUFFICIENT_DRIVER_BALANCE=Недостатньо товару 
 warehouse.error.INVALID_FILTER=Недопустимий ключ фільтра
 warehouse.notfound=Склад не знайдено
 
+purchase.error.VEHICLE_SENDER_NOT_FOUND=Відправника не знайдено
+purchase.error.VEHICLE_SENDER_ALREADY_EXISTS=Відправник з такою назвою вже існує
+purchase.error.VEHICLE_RECEIVER_NOT_FOUND=Отримувача не знайдено
+purchase.error.VEHICLE_RECEIVER_ALREADY_EXISTS=Отримувач з такою назвою вже існує
+
 json.error=Некоректний формат JSON
