twenty-fifth step to new crm

--- a/purchase-service/src/main/resources/messages.properties
+++ b/purchase-service/src/main/resources/messages.properties
@@ -79,5 +79,6 @@ purchase.error.VEHICLE_SENDER_NOT_FOUND=Відправника не знайде
 purchase.error.VEHICLE_SENDER_ALREADY_EXISTS=Відправник з такою назвою вже існує
 purchase.error.VEHICLE_RECEIVER_NOT_FOUND=Отримувача не знайдено
 purchase.error.VEHICLE_RECEIVER_ALREADY_EXISTS=Отримувач з такою назвою вже існує
+purchase.error.DUPLICATE_CATEGORY_EXPENSE=Для цієї машини вже існує витрата з такою категорією
 
 json.error=Некоректний формат JSON
